# AptSourcesHardener.py

./: .editorconfig  .gitlab-ci.yml  ReadMe.md  setup.cfg
AptSourcesHardener/: __init__.py  __main__.py  crypto.py
