[metadata]
name = AptSourcesHardener
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/AptSourcesHardener.py
description = A package to harden sources.list in Debian-based distros. Binds sources to their public keys using `signed-by`.
long_description = file: ReadMe.md
keywords = APT, Debian, Ubuntu, Mint, Kali, Antix
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Everyone
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: Linux
	Operating System :: FreeBSD
	Operating System :: HURD

[options]
python_requires = >=3.4
zip_safe = True
include_package_data = True
packages = AptSourcesHardener
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3
test_suite = tests.tests.SimpleTests
install_requires =
	AptSourcesList @ git+https://gitlab.com/KOLANICH/AptSourcesList.py.git
	plumbum @ git+https://github.com/tomerfiliba/plumbum.git
